--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
                 </a>
         </div>
         <div>
-            <a href="">Interest-Based Ads</a>
+            <a href="">Intest-Based Ads</a>
         </div>
     </div>
    </div>
