change in words

--- a/index.html
+++ b/index.html
@@ -1073,7 +1073,7 @@
                 </a>
         </div>
         <div>
-            <a href="">Intest-Based Ads</a>
+            <a href="">Interst-Based Ads</a>
         </div>
     </div>
    </div>
